Add organization header and general project header
Share the same common base for this

--- a/readthedocsext/theme/templates/audit/partials/log_list.html
+++ b/readthedocsext/theme/templates/audit/partials/log_list.html
@@ -21,7 +21,7 @@
   </a>
 {% endblock %}
 
-{% block list_placeholder_icon_class %}fa-clipboard-list{% endblock %}
+{% block list_placeholder_icon_class %}fad fa-clipboard-list-check{% endblock %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
     The security log is currently empty.
