--- a/readthedocsext/theme/templates/projects/project_detail.html
+++ b/readthedocsext/theme/templates/projects/project_detail.html
@@ -7,9 +7,7 @@
 {% block title %}{{ project.name }}{% endblock %}
 
 {% block content-header %}
-  {% with overview_active="active" %}
-    {% include "projects/partials/header.html" with is_expanded=True %}
-  {% endwith %}
+  {% include "projects/partials/header.html" with overview_active="active" is_collapsed=False %}
 {% endblock %}
 
 {% block content %}
