--- a/readthedocsext/theme/templates/projects/user_list.html
+++ b/readthedocsext/theme/templates/projects/user_list.html
@@ -12,7 +12,7 @@
   {% include "projects/partials/edit/user_list.html" with objects=users %}
 
   <h3 class="ui medium header">
-    {% trans "Add Maintainer" %}
+    {% trans "Add maintainer" %}
   </h3>
 
   <div class="ui info message">
