--- a/readthedocsext/theme/templates/projects/partials/header.html
+++ b/readthedocsext/theme/templates/projects/partials/header.html
@@ -13,14 +13,14 @@ project dashboard pages. It is possible to expand the menu with a dropdown.
 
 Arguments:
 
-is_expanded (default: False)
+is_collapsed (default: True)
     The default view configuration, normally start this view off in a collapsed
-    state, besides the main project detail page.
+    state, except on the main detail page.
 
 {% endcomment %}
 
 {% block project_header %}
-  <div class="ui top attached segment" data-bind="using: ProjectHeaderView({{ is_expanded|yesno:"true,false" }})">
+  <div class="ui top attached segment" data-bind="using: CollapsingHeaderView({{ is_collapsed|default_if_none:True|yesno:"true,false" }})">
 
     {% block project_header_metadata %}
       <div class="ui stacking grid">
@@ -33,7 +33,7 @@ is_expanded (default: False)
               </a>
 
               {# The dropdown action button, to swap between expanded/collapsed #}
-              <span data-bind="click: toggle_expanded">
+              <span data-bind="click: toggle_collapsed">
                 <i class="fas grey small icon" data-bind="class: dropdown_class"></i>
               </span>
             </div>
@@ -50,7 +50,7 @@ is_expanded (default: False)
         {% endblock project_header_labels %}
 
         {% block project_header_metadata_left %}
-          <div class="eight wide computer eight wide tablet sixteen wide mobile column" data-bind="visible: is_expanded" style="display: none;">
+          <div class="eight wide computer eight wide tablet sixteen wide mobile column" data-bind="visible: !is_collapsed()" style="display: none;">
 
             {% block project_header_description %}
               {% if project.description %}
@@ -125,7 +125,7 @@ is_expanded (default: False)
         {% endblock project_header_metadata_left %}
 
         {% block project_header_metadata_right %}
-          <div class="right aligned eight wide computer eight wide tablet sixteen wide mobile column" data-bind="visible: is_expanded" style="display: none;">
+          <div class="right aligned eight wide computer eight wide tablet sixteen wide mobile column" data-bind="visible: !is_collapsed()" style="display: none;">
 
             {% block project_header_maintainers %}
               <div class="ui sub header">
