Some small cleanup edits

--- a/readthedocsext/theme/templates/organizations/partials/log_list.html
+++ b/readthedocsext/theme/templates/organizations/partials/log_list.html
@@ -35,7 +35,7 @@
               {% trans "Need longer retention?" %}
             </span>
             <p>
-              {% blocktrans trimmed with days_limit=days_limit %}
+              {% blocktrans trimmed %}
                 Upgrade your plan to increase the log storage duration.
               {% endblocktrans %}
             </p>
