--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -7,7 +7,7 @@
 {% block title %}{{ build.project.name }}{% endblock %}
 
 {% block content-header %}
-  {% include "projects/partials/header.html" builds_active="active" %}
+  {% include "projects/partials/header.html" with builds_active="active" %}
 {% endblock %}
 
 {% block content %}
