Addons: allow users to opt-in into the beta addons
Show a small form to the user where they can enable/disable the new beta addons
on their project.

* Closes #212
* Requires https://github.com/readthedocs/readthedocs.org/pull/10733

--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -17,6 +17,9 @@
         <a class="item {% block project_advanced_active %}{% endblock %}" href="{% url "projects_advanced" project.slug %}">
           {% trans "Advanced settings" %}
         </a>
+        <a class="item {% block project_addons_active %}{% endblock %}" href="{% url "projects_addons" project.slug %}">
+            {% trans "Addons" %} <i class="ui small grey fa-duotone fa-rocket"></i>
+        </a>
         <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
           {% trans "Domains" %}
         </a>
