Add beta label on the menu item

--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -18,7 +18,10 @@
           {% trans "Advanced settings" %}
         </a>
         <a class="item {% block project_addons_active %}{% endblock %}" href="{% url "projects_addons" project.slug %}">
-            {% trans "Addons" %} <i class="ui small grey fa-duotone fa-rocket"></i>
+            {% trans "Addons" %}
+            <div class="ui basic primary label">
+                {% trans "Beta" %}
+            </div>
         </a>
         <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
           {% trans "Domains" %}
