Upate the notification and ask for feedback

--- a/readthedocsext/theme/templates/projects/addons_form.html
+++ b/readthedocsext/theme/templates/projects/addons_form.html
@@ -15,7 +15,7 @@
 {% block project_edit_content %}
   <div class="ui info message">
     {% blocktrans trimmed %}
-      Read the Docs addons are in beta. Give it a try now!
+      We are in beta! Give it a try now and share your feedback with us by <a href="https://github.com/readthedocs/addons" target="_blank">opening an issue</a>.
     {% endblocktrans %}
   </div>
 
