--- a/readthedocsext/theme/templates/projects/edit_base.html
+++ b/readthedocsext/theme/templates/projects/edit_base.html
@@ -17,6 +17,12 @@
         <a class="item {% block project_advanced_active %}{% endblock %}" href="{% url "projects_advanced" project.slug %}">
           {% trans "Advanced settings" %}
         </a>
+        <a class="item {% block project_addons_active %}{% endblock %}" href="{% url "projects_addons" project.slug %}">
+            {% trans "Addons" %}
+            <div class="ui basic primary label">
+                {% trans "Beta" %}
+            </div>
+        </a>
         <a class="item {% block project_domains_active %}{% endblock %}" href="{% url "projects_domains" project.slug %}">
           {% trans "Domains" %}
         </a>
