--- a/readthedocsext/theme/templates/includes/utils/messages.html
+++ b/readthedocsext/theme/templates/includes/utils/messages.html
@@ -24,6 +24,7 @@
         info/success/error classes on the messages, which just happen to align
         with SUI classes too.
       {% endcomment %}
+      {# fmt:off #}
       {% spaceless %}
         <div style="display: none;"
              data-bind="
@@ -38,6 +39,7 @@ semanticui: {
 }">
         </div>
       {% endspaceless %}
+      {# fmt:on #}
     {% endif %}
   {% endfor %}
 {% endif %}
