--- a/readthedocsext/theme/templates/organizations/partials/owners_list.html
+++ b/readthedocsext/theme/templates/organizations/partials/owners_list.html
@@ -40,7 +40,7 @@
 {% block list_placeholder_icon_class %}fad fa-user-plus icon{% endblock %}
 {% block list_placeholder_header %}
   {% blocktrans trimmed %}
-    No organization owners found or no matchse found for your filter criteria.
+    No organization owners found or no matches found for your filter criteria.
   {% endblocktrans %}
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
