--- a/readthedocsext/theme/templates/projects/integration_webhook_detail.html
+++ b/readthedocsext/theme/templates/projects/integration_webhook_detail.html
@@ -11,27 +11,23 @@
 {% endblock %}
 
 {% block project_edit_content %}
-  {% if integration.has_sync and integration.can_sync %}
-    <p>
-      {% blocktrans trimmed %}
-        This integration is being managed automatically by Read the Docs. If
-        it isn't functioning correctly, try re-syncing the webhook:
-      {% endblocktrans %}
-    </p>
-    <p>
-      {% url 'api_webhook' project_slug=project.slug integration_pk=integration.pk as webhook_url %}
-      <a href="{{ PUBLIC_API_URL }}{{ webhook_url }}">{{ PUBLIC_API_URL }}{{ webhook_url }}</a>
-    </p>
-  {% else %}
-    {% comment %}
-      Display information for manual webhook set up if either case is true:
+  {% if integration.has_sync %}
+    {% if integration.can_sync %}
+      <p>
+        {% blocktrans trimmed %}
+          This integration is being managed automatically by Read the Docs. If
+          it isn't functioning correctly, try re-syncing the webhook.
+        {% endblocktrans %}
+      </p>
+    {% else %}
+      {% comment %}
+        Display information for manual webhook set up if either case is true:
 
-      * Integration doesn't have the ability to sync
-      * Integration has ability to sync, but we don't have the data returned
-        from the provider API on webhook creation (or webhook was automatically
-        created on new data from an old webhook)
-    {% endcomment %}
-    {% if integration.has_sync and not integration.can_sync %}
+        * Integration doesn't have the ability to sync
+        * Integration has ability to sync, but we don't have the data returned
+          from the provider API on webhook creation (or webhook was automatically
+          created on new data from an old webhook)
+      {% endcomment %}
       <p>
         {% blocktrans trimmed %}
           This integration is not managed by Read the Docs currently.
@@ -41,31 +37,62 @@
         {% endblocktrans %}
       </p>
     {% endif %}
+  {% endif %}
 
-    <p>
-      {% blocktrans trimmed %}
-        To manually configure this webhook with your provider, use the
-        following address:
-      {% endblocktrans %}
-    </p>
+  <p>
+    {% blocktrans trimmed %}
+      To manually configure this webhook with your provider, use the
+      following information:
+    {% endblocktrans %}
+  </p>
 
-    <div class="ui segment">
-      {% url 'api_webhook' project_slug=project.slug integration_pk=integration.pk as webhook_url %}
-      {% with PUBLIC_API_URL|add:webhook_url as integration_url %}
-        <code>{{ integration_url }}</code>
-        <span class="ui compact icon basic button" data-clipboard-text="{{ integration_url }}" data-content="{% trans "Copied!" %}">
-          <i class="fa-duotone fa-copy icon"></i>
-        </span>
-      {% endwith %}
-    </div>
+  <div class="ui segment">
+    {% url 'api_webhook' project_slug=project.slug integration_pk=integration.pk as webhook_url %}
+    {% with PUBLIC_API_URL|add:webhook_url as integration_url %}
+      <code>{{ integration_url }}</code>
+      <span class="ui compact icon basic button" data-clipboard-text="{{ integration_url }}" data-content="{% trans "Copied!" %}">
+        <i class="fa-duotone fa-copy icon"></i>
+      </span>
+    {% endwith %}
+  </div>
 
-    {% block integration_details %}{% endblock %}
+  {% block integration_details %}
+    {% if integration.secret %}
+      <div class="ui segment">
+        <ul class="ui list">
+          <li class="item">
+            <div class="content">
+              <div class="header">
+                {% trans "Secret" %}
+              </div>
+              <div class="description">
+                <code>{{ integration.secret }}</code>
+                <span class="ui compact icon basic button" data-clipboard-text="{{ integration.secret }}" data-content="{% trans "Copied!" %}">
+                  <i class="fa-duotone fa-copy icon"></i>
+                </span>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    {% else %}
+      <div class="ui warning message">
+          {% blocktrans trimmed %}
+          This integration does not have a secret,
+          the authenticity of the incoming webhook cannot be verified.
+          <strong>Click on "Resync webhook" to generate a secret.</strong>
+          Read more in our <a href="https://blog.readthedocs.com/security-update-on-incoming-webhooks/">blog post</a>.
+          {% endblocktrans %}
+      </div>
+    {% endif %}
+  {% endblock %}
 
+  {% if not integration.can_sync %}
     <p>
       {% blocktrans trimmed %}
         For more information on manually configuring a webhook, refer to
         <a href="https://docs.readthedocs.io/page/webhooks.html">
-          our webhook documentation
+          our webhook documentation.
         </a>
       {% endblocktrans %}
     </p>
