Add project sharing view templates
This adds:

- Listing page
- Edit/detail page
- Delete modal
- Admin dashboard navigation item

- Closes #235
- Requires https://github.com/readthedocs/readthedocs-corporate/pull/1695

--- a/readthedocsext/theme/templates/semantic-ui/fields/checkbox.html
+++ b/readthedocsext/theme/templates/semantic-ui/fields/checkbox.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_field %}
 
 {% block field-outer %}
-  <div class="{% if field.field.required %} required{% endif %}{% if field.errors %} error{% endif %}{% if 'form-horizontal' in form_class %} inline {% endif %}field">
+  <div class="ui checkbox {% if field.field.required %} required{% endif %}{% if field.errors %} error{% endif %}{% if 'form-horizontal' in form_class %} inline {% endif %}field">
     {% if label_class or field.field.widget.attrs.class %}
       <div class="{% for offset in bootstrap_checkbox_offsets %}{{ offset }} {% endfor %}{{ field_class }}{{ field.field.widget.attrs.class }}">
         {{ block.super }}
