Update sponsors in footer
Closes #21

--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -138,9 +138,9 @@
       <div class="ui six column doubling grid container">
         <div class="column bottom aligned centered">
           <div class="ui tiny inverted header centered">
-            <a href="https://azure.microsoft.com" rel="noopener" target="_blank">
-              <img class="ui tiny centered image" src="{% static 'images/sponsors/azure.png' %}" alt="Microsoft Azure" />
-              Microsoft Azure
+            <a href="https://aws.amazon.com" rel="noopener" target="_blank">
+              <img class="ui tiny centered image" src="{% static 'images/sponsors/aws.png' %}" alt="Amazon Web Services" />
+              AWS
               <div class="sub header">Cloud Computing</div>
             </a>
           </div>
