--- a/readthedocsext/theme/templates/builds/partials/build_list.html
+++ b/readthedocsext/theme/templates/builds/partials/build_list.html
@@ -47,7 +47,8 @@
 {% endblock list_placeholder_text %}
 
 {% block list_item_right_menu %}
-  {% if request.user|is_admin:project %}
+  {# Note: for better performance, avoid multiple `is_admin` checks. Call this include with `is_project_admin` #}
+  {% if is_project_admin is not None and is_project_admin or request.user|is_admin:project %}
     <form method="post" action="{% url "projects_detail" project.slug %}">
       {% csrf_token %}
       <input type="hidden" name="version_slug" value="{{ object.version.slug }}">
